@@ -29,7 +29,6 @@ package it.tidalwave.northernwind.model.impl.admin;
 import javax.annotation.Nonnull;
 import java.io.IOException;
 import java.nio.charset.Charset;
-import com.google.common.collect.ImmutableList;
 import lombok.RequiredArgsConstructor;
 import it.tidalwave.util.Id;
 import it.tidalwave.util.Key;
@@ -37,6 +36,7 @@ import it.tidalwave.util.NotFoundException;
 import it.tidalwave.northernwind.core.model.ResourceFile;
 import it.tidalwave.northernwind.core.model.ResourceProperties;
 import java.util.Arrays;
+import java.util.List;
 import lombok.extern.slf4j.Slf4j;
 
 /***********************************************************************************************************************
@@ -71,7 +71,7 @@ import lombok.extern.slf4j.Slf4j;
 @RequiredArgsConstructor @Slf4j
 public class PatchedTextResourcePropertyResolver implements ResourceProperties.PropertyResolver
   {
-    private static final ImmutableList<String> EXTENSIONS = ImmutableList.of(".xhtml", ".html", ".xml", ".txt");
+    private static final List<String> EXTENSIONS = List.of(".xhtml", ".html", ".xml", ".txt");
 
 //    @Nonnull
 //    private RequestLocaleManager localeRequestManager;
@@ -87,8 +87,9 @@ public class PatchedTextResourcePropertyResolver implements ResourceProperties.P
      * {@inheritDoc}
      *
      ******************************************************************************************************************/
+    @Nonnull
     @Override @SuppressWarnings("unchecked")
-    public <Type> Type resolveProperty (final @Nonnull Id propertyGroupId, final @Nonnull Key<Type> propertyName)
+    public <Type> Type resolveProperty (@Nonnull final Id propertyGroupId, @Nonnull final Key<Type> propertyName)
       throws NotFoundException, IOException
       {
         log.trace("resolveProperty({})", propertyName);
@@ -96,7 +97,7 @@ public class PatchedTextResourcePropertyResolver implements ResourceProperties.P
         final ResourceFile propertyFile = findLocalizedFile(propertyName.stringValue());
         log.trace(">>>> reading from {}", propertyFile.getPath());
         final String mimeType = propertyFile.getMimeType();
-        final String charset = mimeType.equals("application/xhtml+xml") ? "UTF-8" : Charset.defaultCharset().name();
+        final String charset = "application/xhtml+xml".equals(mimeType) ? "UTF-8" : Charset.defaultCharset().name();
 
         try
           {
@@ -114,7 +115,7 @@ public class PatchedTextResourcePropertyResolver implements ResourceProperties.P
      *
      ******************************************************************************************************************/
     @Nonnull
-    private ResourceFile findLocalizedFile (final @Nonnull String fileName)
+    private ResourceFile findLocalizedFile (@Nonnull final String fileName)
       throws NotFoundException
       {
         log.trace("findLocalizedFile({})", fileName);
